<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">HydroApp</string>
    <string name="graph_name">Graphs</string>

    <string-array name="items_array">
        <item>Sensors</item>
        <item>Timers</item>
        <item>Graphs:</item>
        <item>->Air Temp Graph</item>
        <item>->Ph Graph</item>
        <item>->Humidity Graph</item>
        <item>->Water Temp Graph</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">PH Reading: </string>
    <string name="phData"></string>
    <string name="phReading">phReading</string>
    <string name="airTemp">Air Temperature</string>
    <string name="airTempReading">Air temp reading</string>
    <string name="waterTemp">Water Temp Reading</string>
    <string name="waterTemp2">Water Temp</string>
    <string name="waterTempReading">water temp</string>
    <string name="humidityReading">Rel Humidity</string>
    <string name="humidityReading2">humidity reading</string>
    <string name="hydroApp">HydroApp</string>
    <string name="graph">Graphs layout</string>
    <string name="timer">Timers layout</string>
    <string name="ph_graph">Ph Graph</string>
    <string name="water_graph">Water Graph</string>
    <string name="temp_graph">Temperature Graph</string>
    <string name="power_graph">Power Graph</string>
    <string name="light_graph">Light Graph</string>
    <string name="humidity_graph">Humidity Graph</string>
    <string name="lights_state">Lights</string>
    <string name="fan_state">Fans</string>
    <string name="water_pump_state"> H20</string>
    <string name="signal_strength">Signal Strength : </string>
    <string name="signal_reading">signal</string>
    <string name="current_timer">Current Timer</string>
    <string name="over_ride">Override Switch</string>
    <string name="num_of_stages_prompt">How many grow stages would you like to use?</string>
    <string name="grow_setup">Grow Setup</string>
    <string name="grow_type_question">What type of plant would you like to grow?</string>
    <string name="plant_type_hint">e.g. Tomato</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="next">Next</string>
    <string name="stage_length_question">How long do you want each stage to last?</string>
    <string name="stage">Stage</string>
    <string name="length">Length</string>
    <string name="module_name">module_name</string>
    <string name="plant_name">Tomatoes</string>
    <string name="minimum">Min :</string>
    <string name="maximum">Max :</string>
    <string name="minimum_value">0.0</string>
    <string name="maximum_value">99.0</string>
    <string name="sensor_title">sensor_title</string>
    <string name="state_image">state_image</string>
    <string name="date_picker_title">Stage 1 Start Date:</string>
    <string name="ph_level">pH Level</string>
    <string name="water_temp">Water Temperature</string>
    <string name="air_temp">Air Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="seven_eight">78</string>
    <string name="seven_nine">79</string>
    <string name="three_four">34</string>
    <string name="three_eight">38</string>
    <string name="wireless_prompt">There are 3 wireless devices connected. What would you like them to be called?</string>
    <string name="wireless">Wireless</string>
    <string name="name">Name</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="wireless1">Wireless 1</string>
    <string name="wireless2">Wireless 2</string>
    <string name="wireless3">Wireless 3</string>
    <string name="timers">Timers</string>
    <string name="wireless_device">Wireless Device</string>
    <string name="title_activity_splashscreen">Splashscreen</string>

</resources>
