<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
	<TextView android:id="@+id/stageLengthPromt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:text="@string/stage_length_question"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<RelativeLayout android:id="@+id/stageLengthLabel"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:layout_below="@id/stageLengthPromt"
	    android:layout_margin="20dp" >
	
		<TextView android:id="@+id/stageText"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="20dp"
	    	android:layout_alignParentLeft="true"
	    	android:text="@string/stage"
	    	android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<TextView android:id="@+id/lengthText"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="20dp"
	    	android:layout_toRightOf="@id/stageText"
	    	android:text="@string/length"
	    	android:textAppearance="?android:attr/textAppearanceLarge" />
		    
		
	</RelativeLayout>
	
	<RelativeLayout android:id="@+id/stageLengthPicker"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:inputType="phone"
		android:digits="1234567890"
	    android:layout_below="@id/stageLengthLabel"
	    android:layout_margin="10dp" />
	
	<RelativeLayout android:id="@+id/datePickerLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	   	android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:layout_below="@id/stageLengthPicker"
	    android:layout_margin="5dp" >
	    
	    <TextView android:id="@+id/datePickerText"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/date_picker_title"
	    	android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <Button android:id="@+id/datePickerButton"
			android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePickerText"
           	android:textAppearance="?android:attr/textAppearanceLarge" />
        	  
	</RelativeLayout>
	
	<Button
        android:id="@+id/next2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_below="@id/datePickerLayout"
        android:text="@string/next" /> 
    

</RelativeLayout>
