<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/numStagesPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/num_of_stages_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/numStagesPrompt"
        android:layout_margin="45dp" >

        <TextView
            android:id="@+id/numOfStages"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/white_square_black_border"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="40dp"
            android:layout_toLeftOf="@id/numOfStages"
            android:text="@string/minus" />
        
        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="40dp"
            android:layout_toRightOf="@id/numOfStages"
            android:text="@string/plus" />       
           
    </RelativeLayout>
    
    <Button
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:layout_below="@id/container1"
        android:text="@string/next" /> 

</RelativeLayout>
