<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/PlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/plant_name"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/MinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PlantName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/minimum"
        android:textColor="#2185c5"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/MinValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/MinLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:textColor="#8abb3b"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/MaxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/MinLabel"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/maximum"
        android:textColor="#2185c5"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/MaxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/MaxLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:textColor="#8abb3b"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/SensorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sensor_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2185c5"
        android:textSize="40dip" />

    <TextView
        android:id="@+id/displayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SensorTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/border"
        android:padding="20dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8abb3b"
        android:textSize="48dip"
        android:textStyle="bold" />

</RelativeLayout>